--- a/ui/package.json
+++ b/ui/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.1.7",
-    "@mantine/hooks": "^7.1.7",
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.21",
+    "@mantine/dates": "^6.0.21",
+    "@mantine/hooks": "^6.0.21",
     "@primer/octicons-react": "^19.8.0",
+    "@tabler/icons-react": "^2.40.0",
+    "dayjs": "^1.11.10",
+    "mantine-react-table": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
