--- a/ui/package.json
+++ b/ui/package.json
@@ -19,8 +19,12 @@
     "@mantine/dates": "^6.0.21",
     "@mantine/form": "^7.2.0",
     "@mantine/hooks": "^6.0.21",
+    "@mantine/prism": "^6.0.21",
     "@primer/octicons-react": "^19.8.0",
     "@tabler/icons-react": "^2.40.0",
+    "@tiptap/extension-color": "^2.1.12",
+    "@tiptap/extension-text-style": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
     "dayjs": "^1.11.10",
     "mantine-react-table": "^1.3.3",
     "react": "^18.2.0",
